@@ -13,7 +13,6 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import java.util.List;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
 @RequestMapping("/api/reports")
 @Controller
@@ -36,7 +35,7 @@ public class ReportController {
 
 		for (UserStandingDto user : users) {
 			sb.append(user.getUserNickname()).append(":").append(NEW_LINE);
-			for (UserTeamScoreDto team : user.getTeamScores().stream().sorted(comparing(UserTeamScoreDto::getTeamNickname)).collect(toList())) {
+			for (UserTeamScoreDto team : user.getTeamScores().stream().sorted(comparing(UserTeamScoreDto::getTeamNickname)).toList()) {
 				sb.append(TAB)
 						.append(team.getTeamNickname())
 						.append("(").append(team.getWinOverUnder()).append(")")
